--- a/css/sgWindow.scss
+++ b/css/sgWindow.scss
@@ -44,7 +44,7 @@ $delta_y_h: -240px;
 
 
 .play{
-	background-image: url(../../themes/_common/images/Admin.png);
+	background-image: url(../images/Admin.png);
 	background-size: 100% 100%;
 }
 .sgWindow{
