--- a/css/sgTab.scss
+++ b/css/sgTab.scss
@@ -1,4 +1,69 @@
 /* Scss Document */
+$active_color : rgba(152,0,9,1.00);
+
+.sg-tab{
+	border:4px solid blue;
+	height: 300px;
+	width: 500px;
+	background-color: slateblue;
+	>.sg-tab-menu{
+		box-sizing: padding-box!important;
+		padding: 0px;
+		margin: 4px;
+		padding: 0px;
+		//list-style-type: none;
+		
+		>*{
+			display: inline;
+			box-sizing: padding-box!important;
+			background-color: rgba(111,111,111,1.00);
+			
+			margin: 0px 2px 0px 0px;
+			padding:4px 10px 4px 10px;
+			cursor: pointer;
+			-webkit-user-select: none;  /* Chrome 49+ */
+			-moz-user-select: none;     /* Firefox 43+ */
+			-ms-user-select: none;      /* No support yet */
+			user-select: none;          /* Likely future */ 
+			
+			>a{
+				text-decoration: none;
+			color:white;
+			}
+			
+
+			border-radius: 4px 12px 0px 0px;
+			&.sg-tab-active{
+				background-color: $active_color;
+			}
+		}
+		
+		>.sg-tab-body{
+		border-top:4px solid $active_color;
+		>.sg-tab-ibody{
+
+			display: none;
+			&.sg-tab-active{
+				display: block!important;
+			}
+		}
+	}
+
+	}
+	>.sg-tab-body{
+		color:white !important;
+		border-top:4px solid $active_color;
+		margin: 0px;
+		padding: 0px;
+		>*{
+
+			display: none;
+			&.sg-tab-active{
+				display: block!important;
+			}
+		}
+	}	
+}
 
 #tab1{
 
@@ -8,7 +73,7 @@
 	
 }
 
-$active_color : rgba(152,0,9,1.00);
+
 //$active_color : rgba(13,62,177,1.00);
 .sg-tab-main{
 	>.sg-tab-menu{
@@ -35,6 +100,17 @@ $active_color : rgba(152,0,9,1.00);
 				background-color: $active_color;
 			}
 		}
+		
+		>.sg-tab-body{
+		border-top:4px solid $active_color;
+		>.sg-tab-ibody{
+
+			display: none;
+			&.sg-tab-active{
+				display: block!important;
+			}
+		}
+	}
 
 	}
 	>.sg-tab-body{
