--- a/css/sgTab.scss
+++ b/css/sgTab.scss
@@ -1,9 +1,10 @@
 /* Scss Document */
 $active_color : rgba(152,0,9,1.00);
 
+
 .sg-tab{
 	border:4px solid blue;
-	height: 300px;
+	height: 100px;
 	width: 500px;
 	background-color: slateblue;
 	>.sg-tab-menu{
@@ -17,7 +18,8 @@ $active_color : rgba(152,0,9,1.00);
 			display: inline;
 			box-sizing: padding-box!important;
 			background-color: rgba(111,111,111,1.00);
-			
+			text-decoration: none;
+			color: white;
 			margin: 0px 2px 0px 0px;
 			padding:4px 10px 4px 10px;
 			cursor: pointer;
