--- a/css/MenuAlpha.css
+++ b/css/MenuAlpha.css
@@ -1,39 +1,129 @@
 /* Scss Document */
-#menu2 {
-  width: 400px; }
-
+@-webkit-keyframes open {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+  }
+}
 @keyframes open {
   0% {
     opacity: 0;
-    transform: scale(0.5);
-    transform-origin: 0 0; }
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+  }
   100% {
     opacity: 1;
-    transform: scale(1);
-    transform-origin: 0 0; } }
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+  }
+}
+
+@-webkit-keyframes close {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 @keyframes close {
   0% {
-    opacity: 1; }
+    opacity: 1;
+  }
   100% {
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes acc-open {
+  0% {
+    max-height: 0px;
+    overflow: hidden;
+    padding-left: 30px;
+    opacity: 0;
+  }
+  100% {
+    max-height: 600px;
+    opacity: 1;
+  }
+}
+
 @keyframes acc-open {
   0% {
     max-height: 0px;
     overflow: hidden;
     padding-left: 30px;
-    opacity: 0; }
+    opacity: 0;
+  }
   100% {
     max-height: 600px;
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes acc-close {
+  0% {
+    max-height: 600px;
+    opacity: 1;
+  }
+  100% {
+    max-height: 0px;
+    overflow: hidden;
+  }
+}
+
 @keyframes acc-close {
   0% {
     max-height: 600px;
-    opacity: 1; }
+    opacity: 1;
+  }
   100% {
     max-height: 0px;
-    overflow: hidden; } }
+    overflow: hidden;
+  }
+}
+
+.sg-menu.summer {
+  width: 350px;
+}
+
+.sg-menu.summer .item > .popup {
+  position: fixed;
+  -webkit-user-select: "none";
+     -moz-user-select: "none";
+      -ms-user-select: "none";
+          user-select: "none";
+  overflow: "none";
+  z-index: 150000000;
+}
+
+.sg-menu.summer .item.open > .popup {
+  visibility: visible;
+}
+
+.sg-menu.summer .item.close > .popup {
+  visibility: hidden;
+}
+
 .sg-menu.summer.menu-dropdown .option {
-  min-width: 160px; }
+  min-width: 160px;
+}
+
 .sg-menu.summer > .caption {
   font-size: 12pt;
   font-family: arial;
@@ -42,94 +132,169 @@
   line-height: 2em;
   text-align: center;
   color: #3F3F3F;
-  letter-spacing: 0.2em; }
+  letter-spacing: 0.2em;
+}
+
 .sg-menu.summer .menu {
   background-color: #DADADA;
-  padding: 2px; }
-  .sg-menu.summer .menu .item {
-    margin: 2px;
-    font-size: 11pt; }
-    .sg-menu.summer .menu .item button.option {
-      height: 100%;
-      width: 100%;
-      vertical-align: bottom;
-      line-height: 2em; }
-    .sg-menu.summer .menu .item .option:not(button) {
-      background-color: #525252;
-      color: #BEBEBE;
-      line-height: 2em;
-      padding-left: 4px; }
-      .sg-menu.summer .menu .item .option:not(button):hover {
-        background-color: #2F0133;
-        color: pink; }
+  padding: 2px;
+}
+
+.sg-menu.summer .menu .item {
+  margin: 2px;
+  font-size: 11pt;
+}
+
+.sg-menu.summer .menu .item button.option {
+  height: 100%;
+  width: 100%;
+  vertical-align: bottom;
+  line-height: 2em;
+}
+
+.sg-menu.summer .menu .item .option:not(button) {
+  background-color: #525252;
+  color: #BEBEBE;
+  line-height: 2em;
+  padding-left: 4px;
+}
+
+.sg-menu.summer .menu .item .option:not(button):hover {
+  background-color: #2F0133;
+  color: pink;
+}
 
 .sg-menu.n-icon .icon {
-  display: none; }
+  display: none;
+}
+
 .sg-menu .submenu .item {
-  min-width: 150px; }
+  min-width: 150px;
+}
+
 .sg-menu .option {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center; }
-  .sg-menu .option > .text {
-    margin-left: 4px;
-    flex: 1 1 auto; }
-  .sg-menu .option > .ind {
-    flex: 0 0 auto;
-    margin-right: 4px; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sg-menu .option > .text {
+  margin-left: 4px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.sg-menu .option > .ind {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  margin-right: 4px;
+}
+
 .sg-menu a {
-  text-decoration: none; }
+  text-decoration: none;
+}
+
 .sg-menu ul {
   margin: 0px;
-  padding: 0px; }
+  padding: 0px;
+}
+
 .sg-menu li {
-  list-style-type: none; }
+  list-style-type: none;
+}
+
 .sg-menu.menu-system > .caption, .sg-menu.menu-nav > .caption {
-  display: none; }
+  display: none;
+}
+
 .sg-menu.menu-system > .menu, .sg-menu.menu-nav > .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row; }
-  .sg-menu.menu-system > .menu > *, .sg-menu.menu-nav > .menu > * {
-    flex: 1 1 auto; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.sg-menu.menu-system > .menu > *, .sg-menu.menu-nav > .menu > * {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
 .sg-menu .menu > .item .option .icon {
   width: 20px;
   height: 20px;
-  border: 1px solid #CECECE; }
+  border: 1px solid #CECECE;
+}
+
 .sg-menu .menu > .item.close > .option > .ind {
   width: 10px;
   height: 10px;
   border-style: solid;
   border-width: 9px 6px 0 6px;
   border-color: #d9ff00 transparent transparent transparent;
-  background-color: transparent; }
+  background-color: transparent;
+}
+
 .sg-menu .menu > .item.open > .option > .ind {
   width: 10px;
   height: 3px;
   background-size: 100%;
-  background-color: #c4c4c4; }
+  background-color: #c4c4c4;
+}
+
 .sg-menu.menu-dropdown .menu > .item.close > .submenu, .sg-menu.menu-system .menu > .item.close > .submenu, .sg-menu.menu-nav .menu > .item.close > .submenu {
-  animation: close  0.5s ease-out; }
+  -webkit-animation: close  0.5s ease-out;
+          animation: close  0.5s ease-out;
+}
+
 .sg-menu.menu-dropdown .menu > .item.open > .submenu, .sg-menu.menu-system .menu > .item.open > .submenu, .sg-menu.menu-nav .menu > .item.open > .submenu {
-  animation: open  0.2s ease-out; }
+  -webkit-animation: open  0.2s ease-out;
+          animation: open  0.2s ease-out;
+}
+
 .sg-menu.menu-accordion .menu > .item.close > .submenu, .sg-menu.menu-accordionx .menu > .item.close > .submenu, .sg-menu.menu-accordiony .menu > .item.close > .submenu {
   max-height: 0px;
   overflow: hidden;
   padding-left: 30px;
   opacity: 0;
   padding: 0px;
-  transition-duration: 0.2s;
-  transition-property: all; }
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+  -webkit-transition-property: all;
+  transition-property: all;
+}
+
 .sg-menu.menu-accordion .menu > .item.open > .submenu, .sg-menu.menu-accordionx .menu > .item.open > .submenu, .sg-menu.menu-accordiony .menu > .item.open > .submenu {
   max-height: 600px;
   opacity: 1;
   padding: 0px 0px 0px 4px;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-property: all;
   transition-property: all;
-  transition-timing-function: ease-in; }
+  -webkit-transition-timing-function: ease-in;
+          transition-timing-function: ease-in;
+}
+
 .sg-menu .menu > .item.close_ > .submenu {
-  animation: close  0.5s ease-out; }
+  -webkit-animation: close  0.5s ease-out;
+          animation: close  0.5s ease-out;
+}
+
 .sg-menu .menu > .item.open_ > .submenu {
-  animation: open  0.2s ease-out; }
-.sg-menu .submenu.close {
-  position: absolute;
-  visibility: hidden; }
+  -webkit-animation: open  0.2s ease-out;
+          animation: open  0.2s ease-out;
+}
+/*# sourceMappingURL=MenuAlpha.css.map */
