--- a/css/sgTab.scss
+++ b/css/sgTab.scss
@@ -4,18 +4,28 @@ $active_color : rgba(152,0,9,1.00);
 
 .sg-tab{
 	border:4px solid blue;
-	height: 100px;
+	//height: 100px;
 	width: 500px;
 	background-color: slateblue;
-	>.sg-tab-menu{
+	
+	>.tab-menu{
 		box-sizing: padding-box!important;
 		padding: 0px;
 		margin: 4px;
 		padding: 0px;
 		//list-style-type: none;
-		
+		display: flex;
+		justify-content: baseline;
+		flex-wrap: wrap;
 		>*{
-			display: inline;
+			
+			//flex:1 1 auto;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis'...';
+			max-width: 90px;
+			min-width: 70px;
+			//flex-direction: column;
 			box-sizing: padding-box!important;
 			background-color: rgba(111,111,111,1.00);
 			text-decoration: none;
@@ -28,46 +38,35 @@ $active_color : rgba(152,0,9,1.00);
 			-ms-user-select: none;      /* No support yet */
 			user-select: none;          /* Likely future */ 
 			
-			>a{
-				text-decoration: none;
-			color:white;
-			}
+			
 			
 
 			border-radius: 4px 12px 0px 0px;
-			&.sg-tab-active{
+			&.tab-active{
 				background-color: $active_color;
 			}
 		}
 		
-		>.sg-tab-body{
-		border-top:4px solid $active_color;
-		>.sg-tab-ibody{
-
-			display: none;
-			&.sg-tab-active{
-				display: block!important;
-			}
-		}
-	}
+	
 
 	}
-	>.sg-tab-body{
+	>.tab-body{
 		color:white !important;
 		border-top:4px solid $active_color;
 		margin: 0px;
 		padding: 0px;
+		overflow: auto;
 		>*{
 
 			display: none;
-			&.sg-tab-active{
+			&.tab-active{
 				display: block!important;
 			}
 		}
 	}	
 }
 
-#tab1{
+#tab11{
 
 	border:0px solid blue;
 	height: 300px;
