--- a/css/MenuAlpha.scss
+++ b/css/MenuAlpha.scss
@@ -1,6 +1,20 @@
 /* Scss Document */
 
 
+.master{
+    background-color: #2F0133;
+    color:white;
+    .flex{
+        color:yellow;
+        display: flex;
+        flex-direction: row;
+
+        >*{
+            flex: 1 1 auto;
+        }
+    }
+}
+
 #menu2, #menu10{
    // width:400px;
 }
