--- a/css/Form.scss
+++ b/css/Form.scss
@@ -21,7 +21,7 @@ body, html{
       
     border: 2px solid #424242;
     padding:4px;
-    width: 800px;
+    width: 100%;
     >.head{
         text-align: center;
         background-color: #72A0A0;
